--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -7,9 +7,10 @@
     <title>Document</title>
   </head>
   <body>
-    <ul class="task-list">
-      <li><a href="./1-gallery.html">Gallery</a></li>
-      <li><a href="./2-form.html">Form</a></li>
-    </ul>
+    <p><a href="./index.html">Go back</a></p>
+
+    <ul class="gallery"></ul>
+
+    <script type="module" src="./js/1-gallery.js"></script>
   </body>
 </html>
